--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
-    "mongodb": "^6.8.1",
+    "fs": "^0.0.1-security",
+    "kerberos": "^2.2.0",
+    "mongodb": "^6.9.0",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
