--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.0",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
     "mongodb": "^6.8.1",
-    "next": "14.2.8",
+    "next": "^14.2.12",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
@@ -24,6 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-modal": "^3.16.3",
     "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
