--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@eslint/config-array": "^0.18.0",
     "@mui/material": "^6.1.0",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
     "fs": "^0.0.1-security",
+    "instead": "^1.0.3",
     "kerberos": "^2.2.0",
     "mongodb": "^6.9.0",
     "next": "^14.2.12",
