--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.9.0",
     "next": "^14.2.12",
     "react": "^18",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "uuid": "^10.0.0"
