--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@emotion/styled": "^11.13.0",
     "@eslint/config-array": "^0.18.0",
     "@mui/material": "^6.1.0",
+    "@mui/x-date-pickers": "^7.17.0",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
+    "dayjs": "^1.11.13",
     "fs": "^0.0.1-security",
     "instead": "^1.0.3",
     "kerberos": "^2.2.0",
