--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fs": "^0.0.1-security",
     "instead": "^1.0.3",
     "kerberos": "^2.2.0",
+    "lucide-react": "^0.441.0",
     "mongodb": "^6.9.0",
     "next": "^14.2.12",
     "react": "^18",
